[package]
name = "web_transport_node"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = "1"
napi = { version = "2", features = ["napi8", "tokio_rt"] }
napi-derive = "2"
tokio = { version = "1", features = ["sync"] }
url = "2"
web-transport-quinn = { path = "../../web-transport-quinn" }
